--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -70,9 +70,9 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color: #212529;
+  color: #111;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #000;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -512,7 +512,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: #000;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1803,7 +1803,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #111;
 }
 
 .table th,
@@ -1853,7 +1853,7 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: #111;
   background-color: rgba(0, 0, 0, 0.075);
 }
 
@@ -2258,7 +2258,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #212529;
+  color: #111;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2650,7 +2650,7 @@ textarea.form-control.is-invalid {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #111;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -2674,7 +2674,7 @@ textarea.form-control.is-invalid {
 }
 
 .btn:hover {
-  color: #212529;
+  color: #111;
   text-decoration: none;
 }
 
@@ -3432,7 +3432,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
-  color: #212529;
+  color: #111;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -4265,15 +4265,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4479,8 +4479,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: #000;
+  border-color: #dee2e6 #dee2e6 #000;
 }
 
 .nav-tabs .dropdown-menu {
@@ -5740,7 +5740,7 @@ a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: #111;
   background-color: #e9ecef;
 }
 
@@ -6800,7 +6800,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: #111;
 }
 
 .carousel {
@@ -10870,7 +10870,7 @@ a.text-dark:focus {
 }
 
 .text-body {
-  color: #212529 !important;
+  color: #111 !important;
 }
 
 .text-muted {
@@ -11044,9 +11044,146 @@ a.text-dark:focus {
   display: none !important;
 }
 
+.form-control.focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #a1cbef;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+}
+
+.form-control.focus.is-valid {
+  border-color: #38c172;
+  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.25);
+}
+
+.form-control.focus.is-invalid {
+  border-color: #e3342f;
+  box-shadow: 0 0 0 0.2rem rgba(227, 52, 47, 0.25);
+}
+
+.b-form-btn-label-control {
+  background-image: none;
+}
+
+[dir=rtl] .b-form-btn-label-control,
+.b-form-btn-label-control[dir=rtl] {
+  flex-direction: row-reverse;
+}
+
+[dir=rtl] .b-form-btn-label-control > label,
+.b-form-btn-label-control[dir=rtl] > label {
+  text-align: right;
+}
+
+.b-form-btn-label-control > .btn {
+  line-height: 1;
+  font-size: inherit;
+  box-shadow: none !important;
+}
+
+.b-form-btn-label-control > .btn:disabled {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control.is-valid > .btn {
+  color: #38c172;
+}
+
+.b-form-btn-label-control.is-invalid > .btn {
+  color: #e3342f;
+}
+
+.b-form-btn-label-control > label {
+  outline: 0;
+  cursor: pointer;
+  min-height: calc(calc(1.6em + 0.75rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control > label.form-control-sm {
+  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control > label.form-control-lg {
+  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control[aria-disabled=true],
+.b-form-btn-label-control[aria-readonly=true] {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-form-btn-label-control[aria-disabled=true] {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control[aria-disabled=true] > label {
+  cursor: default;
+}
+
+.b-avatar {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 1;
+  max-width: 100%;
+  max-height: auto;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.b-avatar:focus {
+  outline: 0;
+}
+
+.b-avatara:not(:disabled):not(.disabled),
+.b-avatarbutton:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+
+.b-avatar.disabled,
+.b-avatar:disabled,
+.b-avatar[disabled] {
+  opacity: 0.65;
+  pointer-events: none;
+}
+
+.b-avatar > span {
+  border-radius: inherit;
+}
+
+.b-avatar .b-icon {
+  width: 60%;
+  height: auto;
+  max-width: 100%;
+  max-height: auto;
+}
+
+.b-avatar img {
+  width: 90%;
+  height: 90%;
+  max-width: 100%;
+  max-height: auto;
+  border-radius: inherit;
+}
+
+.b-calendar .b-calendar-inner {
+  min-width: 250px;
+}
+
 .b-calendar output.readonly {
   background-color: #e9ecef;
   opacity: 1;
+}
+
+.b-calendar .form-control[role=application] {
+  overflow: hidden;
 }
 
 .b-calendar .b-calendar-grid-body .col[data-date] .btn {
@@ -11250,73 +11387,6 @@ a.text-dark:focus {
   border-bottom-left-radius: 0;
 }
 
-.b-form-datepicker.form-control {
-  background-image: none;
-}
-
-.b-form-datepicker.form-control > .btn {
-  line-height: 1;
-  font-size: inherit;
-  box-shadow: none !important;
-}
-
-.b-form-datepicker.form-control > .btn > div {
-  transition: transform 0.15s;
-}
-
-.b-form-datepicker.form-control > .btn:disabled {
-  pointer-events: none;
-}
-
-.b-form-datepicker.form-control > .btn:hover:not(:disabled) > div,
-.b-form-datepicker.form-control > .btn:focus:not(:disabled) > div {
-  transform: scale(1.125);
-}
-
-.b-form-datepicker.form-control.is-valid > .btn {
-  color: #38c172;
-}
-
-.b-form-datepicker.form-control.is-invalid > .btn {
-  color: #e3342f;
-}
-
-.b-form-datepicker.form-control.focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #a1cbef;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
-}
-
-.b-form-datepicker.form-control.focus.is-valid {
-  border-color: #38c172;
-  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.25);
-}
-
-.b-form-datepicker.form-control.focus.is-invalid {
-  border-color: #e3342f;
-  box-shadow: 0 0 0 0.2rem rgba(227, 52, 47, 0.25);
-}
-
-.b-form-datepicker.form-control > label {
-  cursor: pointer;
-}
-
-.b-form-datepicker.form-control[aria-disabled=true],
-.b-form-datepicker.form-control[aria-readonly=true] {
-  background-color: #e9ecef;
-  opacity: 1;
-}
-
-.b-form-datepicker.form-control[aria-disabled=true] {
-  pointer-events: none;
-}
-
-.b-form-datepicker.form-control[aria-disabled=true] > label {
-  cursor: default;
-}
-
 .b-custom-control-lg.custom-file,
 .b-custom-control-lg .custom-file-input,
 .b-custom-control-lg .custom-file-label,
@@ -11498,17 +11568,17 @@ input[type=color].form-control:disabled {
 
 .was-validated .custom-range:valid:focus::-webkit-slider-thumb,
 .custom-range.is-valid:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #bfecd2;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #bfecd2;
 }
 
 .was-validated .custom-range:valid:focus::-moz-range-thumb,
 .custom-range.is-valid:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #bfecd2;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #bfecd2;
 }
 
 .was-validated .custom-range:valid:focus::-ms-thumb,
 .custom-range.is-valid:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #bfecd2;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #bfecd2;
 }
 
 .was-validated .custom-range:valid::-webkit-slider-thumb,
@@ -11587,17 +11657,17 @@ input[type=color].form-control:disabled {
 
 .was-validated .custom-range:invalid:focus::-webkit-slider-thumb,
 .custom-range.is-invalid:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #f8cecc;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #f8cecc;
 }
 
 .was-validated .custom-range:invalid:focus::-moz-range-thumb,
 .custom-range.is-invalid:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #f8cecc;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #f8cecc;
 }
 
 .was-validated .custom-range:invalid:focus::-ms-thumb,
 .custom-range.is-invalid:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem #f8cecc;
+  box-shadow: 0 0 0 1px #000, 0 0 0 0.2rem #f8cecc;
 }
 
 .was-validated .custom-range:invalid::-webkit-slider-thumb,
@@ -11724,6 +11794,11 @@ input[type=color].form-control:disabled {
   width: auto;
 }
 
+[dir=rtl] .b-form-spinbutton.form-control:not(.flex-column),
+.b-form-spinbutton.form-control[dir=rtl]:not(.flex-column) {
+  flex-direction: row-reverse;
+}
+
 .b-form-spinbutton.form-control output {
   font-size: inherit;
   outline: 0;
@@ -11731,8 +11806,10 @@ input[type=color].form-control:disabled {
   background-color: transparent;
 }
 
-.b-form-spinbutton.form-control output > div {
-  min-width: 2em;
+.b-form-spinbutton.form-control output > div,
+.b-form-spinbutton.form-control output > bdi {
+  display: block;
+  min-width: 2.25em;
   height: 1.6em;
 }
 
@@ -11750,26 +11827,8 @@ input[type=color].form-control:disabled {
   pointer-events: none;
 }
 
-.b-form-spinbutton.form-control .btn:hover:not(:disabled) > div {
+.b-form-spinbutton.form-control .btn:hover:not(:disabled) > div > .b-icon {
   transform: scale(1.25);
-}
-
-.b-form-spinbutton.form-control.focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #a1cbef;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
-}
-
-.b-form-spinbutton.form-control.focus.is-valid {
-  border-color: #38c172;
-  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.25);
-}
-
-.b-form-spinbutton.form-control.focus.is-invalid {
-  border-color: #e3342f;
-  box-shadow: 0 0 0 0.2rem rgba(227, 52, 47, 0.25);
 }
 
 .b-form-spinbutton.form-control.disabled,
@@ -12336,6 +12395,85 @@ input[type=color].form-control:disabled {
   color: #1b1e21;
 }
 
+.b-sidebar {
+  display: flex;
+  flex-direction: column;
+  position: fixed !important;
+  top: 0;
+  bottom: 0;
+  width: 320px;
+  max-width: 100% !important;
+  height: 100vh !important;
+  margin: 0 !important;
+  outline: 0;
+  transform: translateX(0);
+  z-index: calc(1030 + 5);
+}
+
+.b-sidebar.slide {
+  transition: transform 0.3s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-sidebar.slide {
+    transition: none;
+  }
+}
+
+.b-sidebar:not(.b-sidebar-right) {
+  left: 0;
+  right: auto;
+}
+
+.b-sidebar:not(.b-sidebar-right).slide:not(.show) {
+  transform: translateX(-100%);
+}
+
+.b-sidebar:not(.b-sidebar-right) > .b-sidebar-header .close {
+  margin-left: auto;
+}
+
+.b-sidebar.b-sidebar-right {
+  left: auto;
+  right: 0;
+}
+
+.b-sidebar.b-sidebar-right.slide:not(.show) {
+  transform: translateX(100%);
+}
+
+.b-sidebar.b-sidebar-right > .b-sidebar-header .close {
+  margin-right: auto;
+}
+
+.b-sidebar > .b-sidebar-header {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 0;
+  align-items: center;
+}
+
+[dir=rtl] .b-sidebar > .b-sidebar-header {
+  flex-direction: row-reverse;
+}
+
+.b-sidebar > .b-sidebar-header .close {
+  float: none;
+  font-size: 1.5rem;
+}
+
+.b-sidebar > .b-sidebar-body {
+  flex-grow: 1;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.b-sidebar > .b-sidebar-footer {
+  flex-grow: 0;
+}
+
 .table.b-table.b-table-fixed {
   table-layout: fixed;
 }
@@ -12369,7 +12507,7 @@ input[type=color].form-control:disabled {
 
 .table.b-table.table-hover > tbody > tr.table-active:hover td,
 .table.b-table.table-hover > tbody > tr.table-active:hover th {
-  color: #212529;
+  color: #111;
   background-image: linear-gradient(rgba(0, 0, 0, 0.075), rgba(0, 0, 0, 0.075));
   background-repeat: no-repeat;
 }
@@ -12451,8 +12589,8 @@ input[type=color].form-control:disabled {
   .table.b-table > thead > tr > .table-b-table-default,
   .table.b-table > tbody > tr > .table-b-table-default,
   .table.b-table > tfoot > tr > .table-b-table-default {
-    color: #212529;
-    background-color: #f8fafc;
+    color: #111;
+    background-color: #000;
   }
 
   .table.b-table.table-dark > thead > tr > .bg-b-table-default,
@@ -12473,7 +12611,7 @@ input[type=color].form-control:disabled {
   }
 
   .table.b-table.table-hover > tbody > tr:hover > .table-b-table-default {
-    color: #212529;
+    color: #111;
     background-image: linear-gradient(rgba(0, 0, 0, 0.075), rgba(0, 0, 0, 0.075));
     background-repeat: no-repeat;
   }
@@ -12922,6 +13060,25 @@ input[type=color].form-control:disabled {
 .table.b-table.b-table-stacked > tbody > tr > [rowspan] + td,
 .table.b-table.b-table-stacked > tbody > tr > [rowspan] + th {
   border-top-width: 3px;
+}
+
+.b-time {
+  min-width: 150px;
+}
+
+.b-time[aria-disabled=true] output,
+.b-time[aria-readonly=true] output,
+.b-time output.disabled {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-time[aria-disabled=true] output {
+  pointer-events: none;
+}
+
+[dir=rtl] .b-time > .d-flex:not(.flex-column) {
+  flex-direction: row-reverse;
 }
 
 .b-toast {
@@ -13465,6 +13622,154 @@ input[type=color].form-control:disabled {
   display: inline-block;
   overflow: visible;
   vertical-align: -0.15em;
+}
+
+.b-icon.b-icon-animation-spin,
+.b-icon.b-iconstack .b-icon-animation-spin > g {
+  transform-origin: center;
+  -webkit-animation: 2s infinite linear normal b-icon-animation-spin;
+          animation: 2s infinite linear normal b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin,
+  .b-icon.b-iconstack .b-icon-animation-spin > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-reverse,
+.b-icon.b-iconstack .b-icon-animation-spin-reverse > g {
+  transform-origin: center;
+  animation: 2s infinite linear reverse b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-reverse,
+  .b-icon.b-iconstack .b-icon-animation-spin-reverse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-pulse,
+.b-icon.b-iconstack .b-icon-animation-spin-pulse > g {
+  transform-origin: center;
+  -webkit-animation: 1s infinite steps(8) normal b-icon-animation-spin;
+          animation: 1s infinite steps(8) normal b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-pulse,
+  .b-icon.b-iconstack .b-icon-animation-spin-pulse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-reverse-pulse,
+.b-icon.b-iconstack .b-icon-animation-spin-reverse-pulse > g {
+  transform-origin: center;
+  animation: 1s infinite steps(8) reverse b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-reverse-pulse,
+  .b-icon.b-iconstack .b-icon-animation-spin-reverse-pulse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-cylon,
+.b-icon.b-iconstack .b-icon-animation-cylon > g {
+  transform-origin: center;
+  -webkit-animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon;
+          animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-cylon,
+  .b-icon.b-iconstack .b-icon-animation-cylon > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-cylon-vertical,
+.b-icon.b-iconstack .b-icon-animation-cylon-vertical > g {
+  transform-origin: center;
+  -webkit-animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon-vertical;
+          animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon-vertical;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-cylon-vertical,
+  .b-icon.b-iconstack .b-icon-animation-cylon-vertical > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@-webkit-keyframes b-icon-animation-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes b-icon-animation-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
+@-webkit-keyframes b-icon-animation-cylon {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+@keyframes b-icon-animation-cylon {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+@-webkit-keyframes b-icon-animation-cylon-vertical {
+  0% {
+    transform: translateY(25%);
+  }
+
+  100% {
+    transform: translateY(-25%);
+  }
+}
+
+@keyframes b-icon-animation-cylon-vertical {
+  0% {
+    transform: translateY(25%);
+  }
+
+  100% {
+    transform: translateY(-25%);
+  }
 }
 
 .btn .b-icon.bi,
