--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,7 +3,9 @@
 
 // Variables
 @import "variables";
-
+// Your variable overrides
+$body-bg: #000;
+$body-color: #111;
 // Bootstrap
 //@import "~bootstrap/scss/bootstrap";
 
