--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -54,6 +54,19 @@ body{
     left: 0;
 }
 
+/*tema login*/
+.logincenter{
+    height: 75vh;
+    justify-content: center;
+    align-items: center;
+}
+
+/*tema register*/
+.registercenter{
+    height: 75vh;
+    justify-content: center;
+    align-items: center;
+}
 
 
    
