--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -44,17 +44,26 @@ body{
     background-color: #304269 !important;
 }
 
+/*
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    /*no canviar alçada plz*/
-    height: 60px;
+    
+    height: 50px;
     background-color: #304269;
     left: 0;
+}*/
+
+
+.footer{
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    background-color: #304269;
 }
-
-
 
    
 
