--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -13,15 +13,18 @@
 *{
     font-family: 'Open Sans', sans-serif !important;
 }
+ /*Para que los titulos de modal tengan nuestro font-family*/
+h5{
+    font-family: 'Bungee', cursive !important;
 
-
+}
 /*template*/
 body{
     /*si descomentem apareix el dgradat*/
     background: linear-gradient(to left, #ffffff, #D9E8F5);
-} 
+}
 #template .navbar {
-    background-color: #304269;    
+    background-color: #304269;
     /*font per als titols*/
     font-family: 'Bungee', cursive !important;
 }
@@ -49,7 +52,7 @@ body{
     position: absolute;
     bottom: 0;
     width: 100%;
-    
+
     height: 50px;
     background-color: #304269;
     left: 0;
@@ -79,5 +82,15 @@ body{
     background-color: #304269;
 }
 
-   
 
+
+/*Margen del form*/
+
+.margenform{
+    margin-left: 25px;
+}
+
+.margeninput{
+    width: 70% !important
+    ; float: left;  margin-left: 25px;
+}
