--- a/plantilla_vue/resources/sass/_variables.scss
+++ b/plantilla_vue/resources/sass/_variables.scss
@@ -17,3 +17,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+$primary: $orange !default;
+
+
+
+.btn-colordefondoinsert {
+    color: #fff;
+    background-color: #383838;
+    border-color: #dc3545;
+}
