Modificacion de horas delas incidencias

--- a/plantilla_vue/public/css/app.css
+++ b/plantilla_vue/public/css/app.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+
 .btn-colordefondoinsert {
   color: #fff;
   background-color: #383838;
