--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -46,7 +46,10 @@ body{
     color: white !important;
     background-color: #304269 !important;
 }
-
+.video-fluid {
+    width: 100%;
+    height: auto;
+  }
 /*
 .footer {
     position: absolute;
@@ -135,3 +138,29 @@ body{
     background-color: #f26101 !important;
 
 }
+
+.videoclcik{
+    float: left;
+    margin-left: 5vh;
+}
+.esconder{
+    visibility: hidden;
+}
+
+.ver{
+    visibility: none;
+
+}
+.elemetos {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+/* Centered text */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
