--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -169,3 +169,11 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+ /*icona nfo modal*/
+.icona-info{
+    width: 37px; 
+    height: 32px;
+    margin-left: 25px;
+    margin-top: 2px; 
+}
