--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -37,20 +37,62 @@ body{
 /* classe aplicable a tots els botons principals */
 .boto-primari
 {
+    border-radius: 25px!important;
     color: white !important;
     background-color: #f26101 !important;
+    transition: 0.7s ease !important;
 }
+
+.boto-primari:hover
+{
+    color: white !important;
+    border-radius: 0px!important;
+    transform: scale(1.1);
+    background-color: #c04d00 !important;
+    transition: 0.7s ease;
+}
+
+.boto-primari:disabled
+{
+    color: white !important;
+    background-color: #ff8839 !important;
+    transform: scale(1);
+    border-radius: 25px!important;
+}
+
 /* classe aplicable a tots els botons secondaris */
 .boto-secondari
 {
+    border-radius: 2rem!important;
     background-color: #91BED4 !important;
+    transition: 0.5s ease!important;
+}
+
+.boto-secondari:hover
+{
+    border-radius: 0rem!important;
+    transform: scale(1.2);
+    background-color: rgb(165, 224, 253) !important;
+    transition: 0.5s ease;
 }
 
 .boto-terciari
 {
+    border-radius: 25px!important;
     color: white !important;
     background-color: #304269 !important;
+    transition: 0.5s ease !important;
+    
 }
+
+.boto-terciari:hover
+{
+    border-radius: 5px!important;
+    color: white !important;
+    background-color: #2366f5 !important;
+    transition: 0.7s ease;
+}
+
 .video-fluid {
     width: 100%;
     height: auto;
