Form incidencia english

--- a/plantilla_vue/public/css/our_css.css
+++ b/plantilla_vue/public/css/our_css.css
@@ -162,6 +162,10 @@ body{
     ; float: left;  margin-left: 25px;
 }
 
+.margeninput2{
+    width: 77% !important
+    ; float: left;  margin-left: 25px;
+}
 
 .btn-colordefondoinsert {
     color: #fff !important;
